fix display on iPhone

--- a/css/main.css
+++ b/css/main.css
@@ -331,7 +331,7 @@ input.input100 {
 }
 
 .wraptxt1 {
-  margin: 1em 2em 1em 2em;
+  margin: 0.5em;
 }
 
 .wraptxt2 {
